# Docker_LV-DOT_Jazzy

./: .gitignore  FRAMEWORK_ARCHITECTURE.md  README.md  compose.yaml  compose_build.bash  entrypoint.sh  tf_jo_zotac_description.txt
DockerFiles/: Dockerfile
src/obstacle_avoidance/: CMakeLists.txt  README.md  package.xml
src/obstacle_avoidance/cfg/: obstacle_avoidance_params.yaml
src/obstacle_avoidance/include/obstacle_avoidance/: obstacleAvoider.cpp  obstacleAvoider.h
src/obstacle_avoidance/launch/: obstacle_avoidance.launch.xml  run_obstacle_avoidance.launch.py
src/obstacle_avoidance/rviz/: detector_jo_zotac.rviz  obstacle_avoidance.rviz
src/obstacle_avoidance/src/: obstacle_avoidance_node.cpp
src/onboard_detector/: CMakeLists.txt  package.xml
src/onboard_detector/cfg/: detector_param.yaml  detector_param_guide.md  detector_param_jo_zotac.yaml
src/onboard_detector/include/onboard_detector/: dbscan.cpp  dbscan.h  dynamicDetector.cpp  dynamicDetector.h  kalmanFilter.cpp  kalmanFilter.h  lidarDetector.cpp  lidarDetector.h  utils.h  uvDetector.cpp
src/onboard_detector/launch/: run_calibration.launch.py  run_calibration_icp.launch.py  run_detector.launch.py
src/onboard_detector/rviz/: detector_bboxes_merger.rviz  detector_debug.rviz  detector_jo_zotac.rviz  detector_working_jo_zotac.rviz  wall_detector_debug.rviz
src/onboard_detector/scripts/: create_bag_with_pose.py
src/onboard_detector/scripts/wall_detector/: wallDetector.cpp  wallDetector.h  wall_detector_node.cpp
src/onboard_detector/scripts/yolo_detector/: yolo_detector.py  yolo_detector_node.py  yolov11_detector.py  yolov11_detector_node.py
src/onboard_detector/src/: calibration_icp_node.cpp  calibration_node.cpp
