<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>Obstacle avoidance package for robot navigation.</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>