<?xml version="1.0"?>
<package format="3">
  <name>onboard_detector</name>
  <version>1.0.0</version>
  <description>The onboard detector package for dynamic object detection.</description>

  <maintainer email="zhefanx@andrew.cmu.edu">Zhefan Xu</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>vision_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- PCL -->
  <depend>pcl_ros</depend>
  <depend>libopen3d-dev</depend>

  <!-- Service generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>